# bve-koatc-t

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  meson.build
src/: ats.cxx  meson.build  version.hxx.in
src/ats/: atsplugin.hxx  beacon.hxx  constant_speed_control.hxx  handles.hxx  horn.hxx  key.hxx  meson.build  notch_position.hxx  reverser_position.hxx  sound_control.hxx  vehicle_spec.hxx  vehicle_state.hxx
src/koatc/: atc_manager.cxx  atc_manager.hxx  beacon_id.hxx  configuration.cxx  configuration.hxx  control_key_manager.cxx  control_key_manager.hxx  handles.cxx  handles.hxx  meson.build  panel_id.hxx  sound_id.hxx  sound_player.hxx  sound_timer.hxx  timer.hxx
src/koatc/logger/: wchar_wrapper.cxx  wchar_wrapper.hxx
src/koatc/pattern/: curve_pattern.cxx  curve_pattern.hxx  flat_pattern.hxx  handle_command.hxx  init_requirements.hxx  overrun_protection_pattern.cxx  overrun_protection_pattern.hxx  overrun_protection_step1_pattern.hxx  overrun_protection_step2_pattern.cxx  overrun_protection_step2_pattern.hxx  pattern_const.hxx  pattern_generator.cxx  pattern_generator.hxx  pattern_manager.cxx  pattern_manager.hxx  red_section_pattern.cxx  red_section_pattern.hxx  speed_limit_pattern.hxx  station_emergency_pattern.cxx  station_emergency_pattern.hxx  station_pattern.cxx  station_pattern.hxx  station_upper_pattern.cxx  station_upper_pattern.hxx
src/koatc/section/: section_info.hxx  section_manager.cxx  section_manager.hxx  section_type.hxx
src/koatc/signal/: car_signal.hxx  signal_manager.cxx  signal_manager.hxx
src/koatc/station/: station_info.hxx  station_manager.cxx  station_manager.hxx
src/koatc/timer/: continuous_timer.hxx  once_timer.hxx
src/koatc/wrapper/: atc_output.cxx  atc_output.hxx  panels.hxx  sounds.hxx
subprojects/: spdlog.wrap
