koatc_files = files([
	'pattern/pattern_generator.cxx',
	'pattern/pattern_generator.hxx',
	'pattern/pattern_manager.cxx',
	'pattern/pattern_manager.hxx',
	'pattern/red_section_pattern.cxx',
	'pattern/red_section_pattern.hxx',
	'section/section_info.hxx',
	'section/section_manager.cxx',
	'section/section_manager.hxx',
	'section/section_type.hxx',
	'signal/car_signal.hxx',
	'signal/signal_manager.cxx',
	'signal/signal_manager.hxx',
	'wrapper/atc_output.cxx',
	'wrapper/atc_output.hxx',
	'atc_manager.cxx',
	'atc_manager.hxx',
	'beacon_id.hxx',
	'panel_id.hxx',
	'sound_id.hxx',
])
