koatc_files = files([
	'logger/wchar_wrapper.cxx',
	'logger/wchar_wrapper.hxx',
	'pattern/curve_pattern.cxx',
	'pattern/curve_pattern.hxx',
	'pattern/flat_pattern.hxx',
	'pattern/handle_command.hxx',
	'pattern/init_requirements.hxx',
	'pattern/overrun_protection_pattern.cxx',
	'pattern/overrun_protection_pattern.hxx',
	'pattern/overrun_protection_step1_pattern.hxx',
	'pattern/overrun_protection_step2_pattern.cxx',
	'pattern/overrun_protection_step2_pattern.hxx',
	'pattern/pattern_const.hxx',
	'pattern/pattern_generator.cxx',
	'pattern/pattern_generator.hxx',
	'pattern/pattern_manager.cxx',
	'pattern/pattern_manager.hxx',
	'pattern/red_section_pattern.cxx',
	'pattern/red_section_pattern.hxx',
	'pattern/station_emergency_pattern.cxx',
	'pattern/station_emergency_pattern.hxx',
	'pattern/station_pattern.cxx',
	'pattern/station_pattern.hxx',
	'section/section_info.hxx',
	'section/section_manager.cxx',
	'section/section_manager.hxx',
	'section/section_type.hxx',
	'signal/car_signal.hxx',
	'signal/signal_manager.cxx',
	'signal/signal_manager.hxx',
	'station/station_info.hxx',
	'station/station_manager.cxx',
	'station/station_manager.hxx',
	'wrapper/atc_output.cxx',
	'wrapper/atc_output.hxx',
	'atc_manager.cxx',
	'atc_manager.hxx',
	'beacon_id.hxx',
	'configuration.cxx',
	'configuration.hxx',
	'control_key_manager.cxx',
	'control_key_manager.hxx',
	'handles.cxx',
	'handles.hxx',
	'panel_id.hxx',
	'sound_id.hxx',
])
